Fixed NEW - NVP

--- a/nvp/index.html
+++ b/nvp/index.html
@@ -36,7 +36,7 @@
         <meta property="og:type" content="website">
         <meta property="og:description" content="Information about NVP, a Development Team.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>NEW - Index</title>
+        <title>NVP - Index</title>
         <link rel="shortcut icon" type = "image/link" href="../files/logo.png">
     </head>
     <body>
