--- a/files/sbn/index.html
+++ b/files/sbn/index.html
@@ -46,9 +46,9 @@
            <br>
            <h1>SkyblockiaNerds</h1>
            <br>
-           <p>misterdepth's main ChatTriggers Modules! Check out all of the downloads below!</p>
-           <a href="./sbn-1.3.0.zip">v1.3.0</a>
-           <p>COMING SOON: 1.4.0</p>
+           <p>misterdepth's main ChatTriggers Module! Check out all of the downloads below!</p>
+           <a href="./sbn-1.3.0.zip">v1.3.0 (Outdated)</a>
+           <a href="./sbn-1.5.0.zip">1.5.0 (LATEST)</a>
            <br>
            <br>
            <a href="https://chattriggers.com/modules/v/SkyblockiaNerds">Check out the official Page for it on ChatTriggers!</a>
