--- a/files/index.html
+++ b/files/index.html
@@ -1,22 +1,22 @@
 <html>
     <style type="text/css">
-         h1 { color: white; text-align: center; font-family: monospace; font-size:50px}
-        h3 { color: white; text-align: center; font-family: monospace; font-size:30px}
-        h5 { color: white; text-align: center; font-family: monospace; font-size:22px}
+        h1 { color: white; text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:50px}
+        h3 { color: rgb(255, 118, 118); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:30px}
+        h5 { color:rgb(55, 201, 238); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:22px}
         body {
-            background-color:black;
+            background-color:rgb(56, 56, 56);
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
         }
         p {
-            font-family: monospace; 
+            font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
             font-size:20px; 
             color:white;
             text-align:center;}
         a {
-            font-family: monospace; 
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
             font-size:20px; 
             color:lime;
             text-align:center;
@@ -44,9 +44,6 @@
         <center>
             <h1>Bro... There's Nothing Here...</h1>
             <hr>
-            <p>This Page is Coming Soon!</p>
-            <br>
-            <br>
             <p>Uh.. So what is this page even for?</p>
             <br>
             <br>
