--- a/smp.html
+++ b/smp.html
@@ -32,33 +32,33 @@
         }
     </style>
     <head>
-        <meta property="og:title" content="Social Media - misterdepth">
+        <meta property="og:title" content="SMPNotGood">
         <meta property="og:type" content="website">
-        <meta property="og:description" content="misterdepth's Social Media">
+        <meta property="og:description" content="">
         <meta property="og:image" content="./files/logo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Social Media - misterwebsite</title>
+        <title>SMPNotGood - About</title>
         <link rel="shortcut icon" type = "image/link" href="./files/logo.png">
     </head>
     <body>
         <center>
-            <br>
-            <br>
-            <h1>My Social Media</h1>
-            <br>
-            <p>Social Media Platforms</p>
-            <button onclick="window.location.href='https://discord.gg/bHqwhVm'">Discord</button>
-            <p></p>
-            <button onclick="window.location.href='https://www.youtube.com/channel/UCY3uJvG0zTYLw8JErrtJDhA'">YouTube</button>
-            <p></p>
-            <button onclick="window.location.href='https://twitch.tv/misterdepth'">Twitch</button>
-            <br>
-            <p>Other Websites</p>
-            <button onclick="window.location.href='https://github.com/misterdepth'">GitHub</button>
-            <p></p>
-            <button onclick="window.location.href='./chattriggers.html'">ChatTriggers Modules</button>
-            <p></p>
-            <br>
+            <h1>SMPNotGood</h1>
+            <hr>
+            <h3>FAQ</h3>
+            <h5>What Is SMPNotGood?</h5>
+            <p>SMPNotGood is a server for friends and friends of friends.</p>
+            <p>The goal isn't to beat the game, it's to create.</p>
+            <h5>Where can I see SMPNotGood?</h5>
+            <p>You can see it in many places!</p>
+            <p>- twitch.tv/misterdepth</p>
+            <p>- twitch.tv/PreacherJackarie</p>
+            <p>and more!</p>
+            <h5>Can I be whitelisted?</h5>
+            <p>No. This server is for friends and friends only,</p>
+            <p>and if someone doesn't personally know you, you aren't invited.</p>
+            <h5>Can I have the World Download/Seed?</h5>
+            <p>Seed - Possibly, you could ask a member of the server and they can decide.</p>
+            <p>World Download - Not possible, the server host I'm using does not have that option :(</p>
             <br>
             <button onclick="window.location.href='./index.html'"">Go Home</button>
         </center>
