--- a/nvp/index.html
+++ b/nvp/index.html
@@ -1,22 +1,22 @@
 <html>
     <style type="text/css">
-        h1 { color: white; text-align: center; font-family: monospace; font-size:50px}
-        h3 { color: white; text-align: center; font-family: monospace; font-size:30px}
-        h5 { color: white; text-align: center; font-family: monospace; font-size:22px}
+        h1 { color: white; text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:50px}
+        h3 { color: rgb(255, 118, 118); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:30px}
+        h5 { color:rgb(55, 201, 238); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:22px}
         body {
-            background-color:black;
+            background-color:rgb(56, 56, 56);
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
         }
         p {
-            font-family: monospace; 
+            font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
             font-size:20px; 
             color:white;
             text-align:center;}
         a {
-            font-family: monospace; 
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
             font-size:20px; 
             color:lime;
             text-align:center;
@@ -44,7 +44,16 @@
             <br>
             <h1>NVP - Information</h1>
             <hr>
-            <h3>More information Coming Soon!</h3>
+            <h3>What is NVP?</h3>
+            <p>NVP is a development team formed by misterdepth and Jwaffled.</p>
+            <p>Development is usually in JS (JavaScript), but can be in different languages.</p>
+            <br>
+            <h3>What are our Goals?</h3>
+            <p>We currently have many ideas, one of them being a Discord Bot for Nitro Boosters with custom rewards!</p>
+            <a href="https://chattriggers.com/modules/v/NVPData">Check out NVPData, a CT Module!</a>
+            <p></p>
+            <br>
+            <button onclick="window.location.href='../index.html'"">Go Home</button>
         </center>
     </body>
 </html>
