--- a/redir/the-feeling-the.html
+++ b/redir/the-feeling-the.html
@@ -1,33 +1,34 @@
 <html>
     <style type="text/css">
-        h1 { color: white; text-align: center; font-family: monospace; font-size:50px}
-        h3 { color: white; text-align: center; font-family: monospace; font-size:30px}
-        h5 { color: white; text-align: center; font-family: monospace; font-size:22px}
+        h1 { color: white; text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:50px}
+        h3 { color: rgb(255, 118, 118); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:30px}
+        h5 { color:rgb(55, 201, 238); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:22px}
         body {
-            background-color:black;
+            background-color:rgb(56, 56, 56);
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
         }
         p {
-            font-family: monospace; 
+            font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
             font-size:20px; 
             color:white;
             text-align:center;}
         a {
-            font-family: monospace; 
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
             font-size:20px; 
             color:lime;
             text-align:center;
         }
         button {
             border:none;
-            color:fuchsia;
-            padding: 15px 32px;
+            background-color: gray;
+            color:lime;
+            padding: 10px 10px;
             text-align: center;
             font-size:16px;
-            font-family:'Courier New', Courier, monospace
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
         }
     </style>
     <head>
