Added more Detail to SMP slides

--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
             <button onclick="window.location.href='./chattriggers.html'">ChatTriggers Modules</button>
             <button onclick="window.location.href='./social-media.html'">Social Media</button>
             <button onclick="window.location.href='./nvp/index.html'">NVP</button>
+            <button onclick="window.location.href='./smp.html'">SMPNotGood</button>
             <hr>
             <h3>Who Am I?</h3>
-            <p>I'm a Programmer, YouTube, Streamer, and Pro Among Us Sweat!</p>
+            <p>I'm a Programmer, YouTube, Streamer, and Gamer.</p>
             <br>
             <br>
             <h5>You can find me at: </h5>
@@ -63,9 +64,11 @@
             <br>
             <br>
             <h3>What Do I Develop?</h3>
-            <p>I Develop in JS mainly, I work in some other languages though!</p>
+            <p>I Develop in JS (JavaScript) mainly, I work in some other languages though!</p>
             <p>I'm currently working on my ChatTriggers modules!</p>
             <a href="./chattriggers.html">Check them out!</a>
+            <p></p>
+            <a href="https://chattriggers.com">Check out ChatTriggers!</a>
             <br>
             <br>
             <br>
