--- a/smp.html
+++ b/smp.html
@@ -1,5 +1,35 @@
 <html>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+        // Add smooth scrolling to all links
+        $("a").on('click', function(event) {
+
+            // Make sure this.hash has a value before overriding default behavior
+            if (this.hash !== "") {
+            // Prevent default anchor click behavior
+            event.preventDefault();
+
+            // Store hash
+            var hash = this.hash;
+
+            // Using jQuery's animate() method to add smooth page scroll
+            // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+            $('html, body').animate({
+                scrollTop: $(hash).offset().top
+            }, 800, function(){
+   
+                // Add hash (#) to URL when done scrolling (default click behavior)
+                window.location.hash = hash;
+            });
+            } // End if
+        });
+        });
+</script>
     <style type="text/css">
+        html {
+        scroll-behavior: smooth;
+        }
         h1 { color: white; text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:50px}
         h3 { color: rgb(255, 118, 118); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:30px}
         h5 { color:rgb(55, 201, 238); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:22px}
@@ -34,8 +64,8 @@
     <head>
         <meta property="og:title" content="SMPNotGood">
         <meta property="og:type" content="website">
-        <meta property="og:description" content="">
-        <meta property="og:image" content="./files/logo.png">
+        <meta property="og:description" content="A friendly SMP for friends!">
+        <meta property="twitter:image:src" content="https://cdn.discordapp.com/attachments/745862251545886750/768616434174918696/GrassNew.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SMPNotGood - About</title>
         <link rel="shortcut icon" type = "image/link" href="./files/logo.png">
@@ -53,12 +83,26 @@
             <p>- twitch.tv/misterdepth</p>
             <p>- twitch.tv/PreacherJackarie</p>
             <p>and more!</p>
+            <a href="#images">You can also look at the images below!</a>
+            <p></p>
             <h5>Can I be whitelisted?</h5>
             <p>No. This server is for friends and friends only,</p>
             <p>and if someone doesn't personally know you, you aren't invited.</p>
             <h5>Can I have the World Download/Seed?</h5>
             <p>Seed - Possibly, you could ask a member of the server and they can decide.</p>
             <p>World Download - Not possible, the server host I'm using does not have that option :(</p>
+            <div class="main" id="images">
+                <h5>Images of the SMP</h5>
+                <p>Click for larger-sized picture.</p>
+                <img src="./files/smp-1.png" width="480" height="254.25" onclick="window.location.href='./files/smp-1.png'">
+                <p></p>
+                <br>
+                <img src="./files/smp-2.png" width="480" height="254.25" onclick="window.location.href='./files/smp-2.png'">
+                <p></p>
+                <br>
+                <img src="./files/smp-3.png" width="480" height="254.25" onclick="window.location.href='./files/smp-3.png'">
+            </div>
+            <p></p>
             <br>
             <button onclick="window.location.href='./index.html'"">Go Home</button>
         </center>
