--- a/chattriggers.html
+++ b/chattriggers.html
@@ -37,7 +37,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:description" content="Check out misterdepth's ChatTriggers modules!">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="./files/logo.png">
+        <meta property="twitter:image:src" content="./files/logo.png">
         <link rel="shortcut icon" type = "image/link" href="./files/logo.png">
     </head>
     <body>
