--- a/crankhotfix.html
+++ b/crankhotfix.html
@@ -24,7 +24,7 @@
         <meta property="og:description" content="Having Issues with CustomRank? Visit this website!">
         <meta property="og:type" content="website">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta property="og:image" content="https://www.chattriggers.com/assets/logo-icon.png">
+        <meta property="twitter:image:src" content="https://www.chattriggers.com/assets/logo-icon.png">
         <title>CRANK Hotfix</title>
         <link rel="shortcut icon" type = "image/link" href="https://www.chattriggers.com/assets/images/logo-icon.png">
     </head>
