--- a/files/index.html
+++ b/files/index.html
@@ -35,7 +35,7 @@
         <meta property="og:title" content="misterdepth">
         <meta property="og:description" content="Files for misterdepth's website">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="./logo.png">
+        <meta property="twitter:image:src" content="./logo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>misterwebsite - Files</title>
         <link rel="shortcut icon" type = "image/link" href="./logo.png">
