--- a/files/sbn/index.html
+++ b/files/sbn/index.html
@@ -33,7 +33,7 @@
    </style>
    <head>
         <meta property="og:title" content="Files/SBN - misterwebsite">
-        <meta property="og:image" content="../logo.png">
+        <meta property="twitter:image:src" content="../logo.png">
         <meta property = "og:description" content="Files/SBN - misterwebsite">
         <meta property="og:type" content="website">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
