--- a/files/seinfeld-folder/index.html
+++ b/files/seinfeld-folder/index.html
@@ -34,7 +34,7 @@
     <head>
         <meta property="og:title" content="The Seinfeld Folder">
         <meta property="og:description" content="The most legendary folder out there.">
-        <meta property="og:image" content="./img.png">
+        <meta property="twitter:image:src" content="./img.png">
         <meta property="og:type" content="website">
         <link rel="shortcut icon" type = "image/link" href="../logo.png">
         <title>Seinfeld Folder - misterwebsite</title>
