--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <meta property="og:title" content="misterdepth">
         <meta property="og:type" content="website">
         <meta property="og:description" content="Welcome to the most professional website out there!">
-        <meta property="og:image" content="./files/logo.png">
+        <meta property="twitter:image:src" content="./files/logo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>misterwebsite</title>
         <link rel="shortcut icon" type = "image/link" href="./files/logo.png">
