--- a/social-media.html
+++ b/social-media.html
@@ -35,7 +35,7 @@
         <meta property="og:title" content="Social Media - misterdepth">
         <meta property="og:type" content="website">
         <meta property="og:description" content="misterdepth's Social Media">
-        <meta property="og:image" content="./files/logo.png">
+        <meta property="twitter:image:src" content="./files/logo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Social Media - misterwebsite</title>
         <link rel="shortcut icon" type = "image/link" href="./files/logo.png">
