Added a new misterlogo

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </head>
     <body>
         <center>
+            <img src="./files/logo.png" width="100" height="100">
             <h1>misterwebsite</h1>
             <button onclick="window.location.href='./redir'">Redirect Services</button>
             <button onclick="window.location.href='./files'">Files</button>
