Added better SMP data

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <button onclick="window.location.href='./files'">Files</button>
             <button onclick="window.location.href='./chattriggers.html'">ChatTriggers Modules</button>
             <button onclick="window.location.href='./social-media.html'">Social Media</button>
-            <button onclick="window.location.href='./nvp/index.html'">NVP</button>
-            <button onclick="window.location.href='./smp.html'">SMPNotGood</button>
+            <button onclick="window.location.href='./nvp'">NVP</button>
+            <button onclick="window.location.href='./smp'">SMPNotGood</button>
             <hr>
             <h3>Who Am I?</h3>
             <p>I'm a Programmer, YouTube, Streamer, and Gamer.</p>
