--- a/smp/index.html
+++ b/smp/index.html
@@ -94,17 +94,17 @@
             <div class="main" id="images">
                 <h5>Images of the SMP</h5>
                 <p>Click for larger-sized picture.</p>
-                <img src="./files/smp-1.png" width="480" height="254.25" onclick="window.location.href='./files/smp-1.png'">
+                <img src="../files/smp-1.png" width="480" height="254.25" onclick="window.location.href='./files/smp-1.png'">
                 <p></p>
                 <br>
-                <img src="./files/smp-2.png" width="480" height="254.25" onclick="window.location.href='./files/smp-2.png'">
+                <img src="../files/smp-2.png" width="480" height="254.25" onclick="window.location.href='./files/smp-2.png'">
                 <p></p>
                 <br>
-                <img src="./files/smp-3.png" width="480" height="254.25" onclick="window.location.href='./files/smp-3.png'">
+                <img src="../files/smp-3.png" width="480" height="254.25" onclick="window.location.href='./files/smp-3.png'">
             </div>
             <p></p>
             <br>
-            <button onclick="window.location.href='./index.html'"">Go Home</button>
+            <button onclick="window.location.href='../index.html'"">Go Home</button>
         </center>
     </body>
 </html>
