--- a/smp/info.html
+++ b/smp/info.html
@@ -41,7 +41,7 @@
         <meta property="twitter:image:src" content="https://cdn.discordapp.com/attachments/745862251545886750/768616434174918696/GrassNew.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SMPNotGood - About</title>
-        <link rel="shortcut icon" type = "image/link" href="./files/logo.png">
+        <link rel="shortcut icon" type = "image/link" href="../files/logo.png">
     </head>
     <body>
         <center>
