Fixed more garbage

--- a/can-you-read/index.html
+++ b/can-you-read/index.html
@@ -9,13 +9,13 @@
         }  
     </style>
     <head>
-        <meta property="og:image" content="./img.png">
-        <meta property="twitter:image:src" content="./img.png">
+        <meta property="og:image" content="./index.png">
+        <meta property="twitter:image:src" content="./index.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Can You Read?</title>
         <link rel="shortcut icon" type = "image/link" href="../files/logo.png">
     </head>
     <body>
-        <img src="./img.png" >
+        <img src="./index.png" >
     </body>
 </html>
