--- a/can-you-read/index.html
+++ b/can-you-read/index.html
@@ -1,21 +1,8 @@
 <html>
-    <style>
-        body {
-            background-color:black;
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-        }  
-    </style>
     <head>
-        <meta property="og:image" content="./index.png">
-        <meta property="twitter:image:src" content="./index.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Can You Read?</title>
-        <link rel="shortcut icon" type = "image/link" href="../files/logo.png">
+        <meta name="viewport" content="width=device-width, minimum-scale=0.1">
     </head>
-    <body>
-        <img src="./index.png" >
+    <body style="margin: 0px; background: #0e0e0e;">
+        <img style="-webkit-user-select: none;margin: auto;cursor: zoom-in;" src="./index.png">
     </body>
 </html>
