--- a/redir/index.html
+++ b/redir/index.html
@@ -43,11 +43,9 @@
         <center>
             <br>
             <br>
-            <h1>Redirecting services - misterwebsite</h1>
+            <h1 id="title">Redirecting services - misterwebsite</h1>
             <br>
-            <p>Redirecting html pages!</p>
-            <p>Want your own? Contact misterdepth#6980 on discord!</p>
-            <a href="https://discord.gg/bHqwhVm">Join My Discord</a>
+            <p id="text">Want your own? Contact misterdepth#6980 on discord!</p>
             <br>
             <br>
             <br>
