--- a/smp/info.html
+++ b/smp/info.html
@@ -55,6 +55,7 @@
             <p><strong>1. </strong>No Griefing or Stealing.</p>
             <p><strong>2. </strong>Segmenting from Rule 1, don't be a jerk.</p>
             <p><strong>3. </strong>Try not to leave people behind. You can still make progression, but don't just sweat the game hard.</p>
+            <p><strong>4. </strong>No hacking. No X-Raying or Cheating for Any Reason.</p>
             <p><i>These rules are subject to change.</i></p>
             <button onclick="window.location.href='../index.html'"">Go Home</button>
         </center>
