--- a/files/sbn/index.html
+++ b/files/sbn/index.html
@@ -49,7 +49,10 @@
            <p>misterdepth's main ChatTriggers Module! Check out all of the downloads below!</p>
            <a href="./sbn-1.3.0.zip">v1.3.0 (Outdated)</a>
            <p></p>
-           <a href="./sbn-1.5.0.zip">v1.5.0 (LATEST)</a>
+           <a href="./sbn-1.5.0.zip">v1.5.0 (Outdated)</a>
+           <p></p>
+           <a href="./sbn-1.5.1.zip">1.5.1 (LATEST)</a>
+           <p></p>
            <br>
            <br>
            <a href="https://chattriggers.com/modules/v/SkyblockiaNerds">Check out the official Page for it on ChatTriggers!</a>
