--- a/404.html
+++ b/404.html
@@ -34,6 +34,7 @@
     <head>
         <title>404 Error</title>
         <link rel="shortcut icon" type = "image/link" href="./files/logo.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <center>
