--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                             <button class="tablinks" onclick="openTab(event, 'sbn')">SBN</button>
                         </li>
                         <li class="centered_tab" ...>
+                            <button class="tablinks" onclick="openTab(event, 'beta')">Beta</button>
+                        </li>
+                        <li class="centered_tab" ...>
                             <button class="tablinks" onclick="openTab(event, 'buttons')">Other Tabs</button>
                         </li>
                     </ul>
@@ -147,7 +150,10 @@
                 <p>I'm currently working on my ChatTriggers modules!</p>
                 <a href="./chattriggers.html">Check them out!</a>
                 <p></p>
-            <a href="https://chattriggers.com">Check out ChatTriggers!</a>
+                <a href="https://chattriggers.com">Check out ChatTriggers!</a>
+                <br>
+                <p>Want to help out with my development?</p>
+                <a href="./beta">Help With Some Beta Features!</a>
             </div>
 
 
@@ -193,12 +199,22 @@
                 <p>If you like my content and enjoy what I do, please consider following. I appreciate it a lot!</p>
             </div>
 
+            <div class="tabcontent" id="beta">
+                <iframe src="./beta" width="600" height="500" frameborder=0>Loading...</iframe>
+                <br>
+                <button onclick="window.location.href='./beta'">Go To This</button>
+            </div>
+
             <div class="tabcontent" id="news">
                 <iframe src="./news" width="600" height="500" frameborder=0>Loading...</iframe>
+                <br>
+                <button onclick="window.location.href='./news'">Go To This</button>
             </div>
 
             <div class="tabcontent" id="sbn">
                 <iframe src="./files/sbn" width="500" height="500" frameborder=0>Loading...</iframe>
+                <br>
+                <button onclick="window.location.href='./files/sbn'">Go To This</button>
             </div>
             <script src="https://embed.twitch.tv/embed/v1.js"></script>
             <script type="text/javascript">
