--- a/beta/index.html
+++ b/beta/index.html
@@ -55,6 +55,9 @@
             <br>
             <h5>Hey!</h5>
             <p>This site is still techincally in development, but this is where I test features for future parts of the website!</p>
+            <br>
+            <br>
+            <button onclick="window.location.href='./cards.html'">Check out the newest Beta Feature!</button>
             <p>If you'd like to help out, then you can follow the steps below.</p>
             <a href="https://discord.gg/bHqwhVm"><strong>1. </strong>Join my discord</a>
             <p><strong>2. </strong>Verify in #verify and go to #roles</p>
