--- a/files/sbn/index.html
+++ b/files/sbn/index.html
@@ -51,7 +51,9 @@
            <p></p>
            <a href="./sbn-1.5.0.zip">v1.5.0 (Outdated)</a>
            <p></p>
-           <a href="./sbn-1.5.1.zip">1.5.1 (LATEST)</a>
+           <a href="./sbn-1.5.1.zip">1.5.1 (Outdated)</a>
+           <p></p>
+           <a href="./sbn-1.5.2.zip">1.5.2 (LATEST)</a>
            <p></p>
            <br>
            <br>
