--- a/nvp/index.html
+++ b/nvp/index.html
@@ -2,6 +2,7 @@
     <style type="text/css">
         h1 { color: white; text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:50px}
         h3 { color: rgb(255, 118, 118); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:30px}
+        h4 { color: rgb(0, 0, 0); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:25px}
         h5 { color:rgb(55, 201, 238); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:22px}
         body {
             background-color:rgb(56, 56, 56);
@@ -30,6 +31,33 @@
             font-size:16px;
             font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
         }
+        .card {
+             /* Add shadows to create the "card" effect */
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            background-color:gray;
+            transition: 0.3s;
+            width:35%;
+            height:50%;
+            border-radius: 5px; /* 5px rounded corners */
+        }
+
+        /* On mouse-over, add a deeper shadow */
+        .card:hover {
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+        }  
+
+        /* Add some padding inside the card container */
+        .container {
+            padding: 2px 16px;
+        }
+        .divider{
+            width:15px;
+            height:auto;
+            display:inline-block;
+        }
+        img {
+            border-radius: 5px 5px 0 0;
+        }
     </style>
     <head>
         <meta property="og:title" content="NVP Information">
@@ -50,10 +78,60 @@
             <br>
             <h3>What are our Goals?</h3>
             <p>We currently have many ideas, one of them being a Discord Bot for Nitro Boosters with custom rewards!</p>
-            <a href="https://chattriggers.com/modules/v/NVPData">Check out NVPData, a CT Module!</a>
-            <p></p>
+            <h3>Our Projects</h3>
             <br>
-            <button onclick="window.location.href='../index.html'"">Go Home</button>
+            <h5>ChatTriggers Modules</h5>
+            <br>
         </center>
+        <div style="display: flex">
+            <div class="card">
+                <br>
+                <img src="../files/sbn/sbn-logo.png" alt="Logo" style="width:90%">
+                <div class="container">
+                    <h4><b>SkyblockiaNerds</b></h4>
+                    <p>A General Purpose Minecraft Utilities Mod!</p>
+                    <p>Also containing useful information, it has</p>
+                    <p>Hypixel-based features as well!</p>
+                </div>
+            </div>
+            <div class="divider"></div>
+            <div class="card">
+                <br>
+                <img src="./logo.png" alt="Logo" style="width:90%">
+                <div class="container">
+                    <h4><b>NVPData</b></h4>
+                    <p>A General Purpose Minecraft Utilities Mod!</p>
+                    <p>Also containing useful information, it has</p>
+                    <p>Hypixel-based features as well!</p>
+                </div>
+            </div>
+            <div class="divider"></div>
+            <div class="card">
+                <br>
+                <img src="../files/elemento-logo.png" alt="Logo" style="width:90%">
+                <div class="container">
+                    <h4><b>Elemento</b></h4>
+                    <p>A wonderful Module!</p>
+                    <p>Has features that are even better than Elementa's!</p>
+                    <p>In all honesty, just download it.</p>
+                </div>
+            </div>
+        </div>
+            <center>
+                <h5>Discord Bots</h5>
+                <br>
+                    <div class="card">
+                        <br>
+                        <div class="container">
+                            <h4><b>Coming Soon!</b></h4>
+                            <p>We're still working on Discord Bots!</p>
+                            <p>We're trying to get some out though,</p>
+                            <p>so they'll be here soon!</p>
+                        </div>
+                    </div>
+                <p></p>
+                <br>
+                <button onclick="window.location.href='../index.html'"">Go Home</button>
+            </center>
     </body>
 </html>
