--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
                 <p>Did you know I run an SMP? Check it out!</p>
                 <button onclick="window.location.href='./wheel'">The Wheel</button>
                 <p>Test your luck with my Wheel!</p>
+                <button onclick="window.location.href='./whybot'">WhyBot</button>
+                <p>Check out my discord bot!</p>
             </div>
             
             <div class="tabcontent" id="media">
