--- a/whybot/index.html
+++ b/whybot/index.html
@@ -106,6 +106,15 @@
             document.getElementById("restarting").innerHTML = restarting
         }
     </script>
+        <head>
+            <meta property="og:title" content="WhyBot">
+            <meta property="og:type" content="website">
+            <meta property="og:description" content="Check out WhyBot, a discord bot made in d.js!">
+            <meta property="twitter:image:src" content="../files/logo.png">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>WhyBot - misterwebsite</title>
+            <link rel="shortcut icon" type = "image/link" href="../files/logo.png">
+        </head>
     <body>
         <center>
             <h1>WhyBot</h1>
@@ -139,6 +148,12 @@
                   <p>To see all of the commands, click on the commands tab!</p>
                   <h5>Is WhyBot online?</h5>
                   <p>To see if WhyBot is online, click on the status tab.</p>
+                  <br>
+                  <br>
+                  <a href="https://discord.com/oauth2/authorize?client_id=722141994184474744&scope=bot&permissions=8">Invite WhyBot Today!</a>
+                  <br>
+                  <br>
+                  <a href="https://discord.com/invite/9JhEsHe">Join the Support Server!</a>
               </div>
 
               <div class="tabcontent" id="commands">
