--- a/index.html
+++ b/index.html
@@ -105,25 +105,10 @@
                             <button class="tablinks" onclick="openTab(event, 'about')" id="default">About Me</button>
                         </li>
                         <li class="centered_tab" ...>
-                            <button class="tablinks" onclick="openTab(event, 'develop')">Development</button>
-                        </li>
-                        <li class="centered_tab" ...>
                             <button class="tablinks" onclick="openTab(event, 'media')">Social Media</button>
                         </li>
                         <li class="centered_tab" ...>
                             <button class="tablinks" onclick="openTab(event, 'twitch')">Twitch</button>
-                        </li>
-                        <li class="centered_tab" ...>
-                            <button class="tablinks" onclick="openTab(event, 'news')">News</button>
-                        </li>
-                        <li class="centered_tab" ...>
-                            <button class="tablinks" onclick="openTab(event, 'sbn')">SBN</button>
-                        </li>
-                        <li class="centered_tab" ...>
-                            <button class="tablinks" onclick="openTab(event, 'beta')">Beta</button>
-                        </li>
-                        <li class="centered_tab" ...>
-                            <button class="tablinks" onclick="openTab(event, 'buttons')">Other Tabs</button>
                         </li>
                     </ul>
                 </div>
@@ -133,7 +118,7 @@
 
             <div class="tabcontent" id="about">
                 <h3>Who Am I?</h3>
-                <p>I'm a Programmer, YouTube, Streamer, and Gamer.</p>
+                <p>I'm a Youtuber AND Streamer. I know, pretty pog right</p>
                 <br>
                 <br>
                 <h5>You can find me at: </h5>
@@ -142,36 +127,6 @@
                 <a href="https://twitch.tv/misterdepth">Twitch - misterdepth</a>
                 <p></p>
                 <a href="https://discord.gg/bHqwhVm">My Discord</a>
-            </div>
-
-            <div class="tabcontent" id="develop">
-                <h3>What Do I Develop?</h3>
-                <p>I Develop in JS (JavaScript) mainly, I work in some other languages though!</p>
-                <p>I'm currently working on my ChatTriggers modules!</p>
-                <a href="./chattriggers.html">Check them out!</a>
-                <p></p>
-                <a href="https://chattriggers.com">Check out ChatTriggers!</a>
-                <br>
-                <p>Want to help out with my development?</p>
-                <a href="./beta">Help With Some Beta Features!</a>
-            </div>
-
-
-            <div class="tabcontent" id="buttons">
-                <button onclick="window.location.href='./redir'">Redirect Services</button>
-                <p>Check out my Redirecting Services! [STILL IN BETA]</p>
-                <button onclick="window.location.href='./files'">Files</button>
-                <p>The almost entirely useless files page for the website.</p>
-                <button onclick="window.location.href='./chattriggers.html'">ChatTriggers Modules</button>
-                <p>Check out my ChatTriggers modules!</p>
-                <button onclick="window.location.href='./nvp'">NVP</button>
-                <p>Check out the website for my semi-company.</p>
-                <button onclick="window.location.href='./smp'">SMPNotGood</button>
-                <p>Did you know I run an SMP? Check it out!</p>
-                <button onclick="window.location.href='./wheel'">The Wheel</button>
-                <p>Test your luck with my Wheel!</p>
-                <button onclick="window.location.href='./whybot'">WhyBot</button>
-                <p>Check out my discord bot!</p>
             </div>
             
             <div class="tabcontent" id="media">
@@ -187,7 +142,6 @@
                 <p>Other Websites</p>
                 <button onclick="window.location.href='https://github.com/misterdepth'">GitHub</button>
                 <p></p>
-                <button onclick="window.location.href='./chattriggers.html'">ChatTriggers Modules</button>
             </div>
 
 
@@ -201,23 +155,6 @@
                 <p>If you like my content and enjoy what I do, please consider following. I appreciate it a lot!</p>
             </div>
 
-            <div class="tabcontent" id="beta">
-                <iframe src="./beta" width="600" height="500" frameborder=0>Loading...</iframe>
-                <br>
-                <button onclick="window.location.href='./beta'">Go To This</button>
-            </div>
-
-            <div class="tabcontent" id="news">
-                <iframe src="./news" width="600" height="500" frameborder=0>Loading...</iframe>
-                <br>
-                <button onclick="window.location.href='./news'">Go To This</button>
-            </div>
-
-            <div class="tabcontent" id="sbn">
-                <iframe src="./files/sbn" width="500" height="500" frameborder=0>Loading...</iframe>
-                <br>
-                <button onclick="window.location.href='./files/sbn'">Go To This</button>
-            </div>
             <script src="https://embed.twitch.tv/embed/v1.js"></script>
             <script type="text/javascript">
                 new Twitch.Embed("twitch-embed", {
