--- a/404.html
+++ b/404.html
@@ -1,46 +1,25 @@
 <html>
     <style type="text/css">
-        h1 { color: white; text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:50px}
-        h3 { color: rgb(255, 118, 118); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:30px}
-        h5 { color:rgb(55, 201, 238); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:22px}
+        h1 { color: rgb(0, 0, 0); text-align: center; font-family:"Asap", sans-serif; font-size:50px}
+        h3 { color: rgb(0, 0, 0); text-align: center; font-family: 'Courier New', Courier, monospace; font-size:30px}
         body {
-            background-color:rgb(56, 56, 56);
+            background-color:rgb(255, 255, 255);
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
         }
-        p {
-            font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
-            font-size:20px; 
-            color:white;
-            text-align:center;}
-        a {
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
-            font-size:20px; 
-            color:lime;
-            text-align:center;
-        }
-        button {
-            border:none;
-            background-color: gray;
-            color:lime;
-            padding: 10px 10px;
-            text-align: center;
-            font-size:16px;
-            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
-        }
     </style>
     <head>
         <title>404 Error</title>
-        <link rel="shortcut icon" type = "image/link" href="./files/logo.png">
+        <link rel="shortcut icon" type = "image/link" href="./question.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <center>
             <h1>404 Error - Page Not Found</h1>
             <hr>
-            <h5>Page Not Found!</h5>
+            <h3>Page Not Found!</h3>
             <p>The page you requested to view was not found!</p>
             <br>
             <button onclick="window.location.href='./index.html'"">Go Home</button>
