--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <html>
     <head>
-        <title>Please wait.</title>
-        <link rel="icon" href="./question.png">
+        <title>misterwebsite</title>
+        <link rel="icon" href="./files/logo.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@700&display=swap" rel="stylesheet">
     <style type="text/css">
-        h1 { color: rgb(0, 0, 0); text-align: center; font-family:"Asap", sans-serif; font-size:50px}
-        h3 { color: rgb(0, 0, 0); text-align: center; font-family: 'Courier New', Courier, monospace; font-size:30px}
+        h1 { color: rgb(255, 255, 255); text-align: center; font-family:"Asap", sans-serif; font-size:50px}
+        h3 { color: rgb(255, 255, 255); text-align: center; font-family: "Asap", sans-serif; font-size:30px}
+        p { color: rgb(255, 255, 255); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:20px}
         body {
-            background-color:rgb(255, 255, 255);
+            background-color:rgb(95, 95, 95);
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -17,40 +19,10 @@
         }
     </style>
     <body>
-        <br>
-        <br>
-        <br>
-        <br>
-        <h1>Welcome.</h1>
-        <br>
-        <br>
-        <br>
-        <br>
-        <h3 id="days"></h3>
-        <h3 id="hours"></h3>
-        <h3 id="minutes"></h3>
-        <h3 id="seconds"></h3>
+        <center><img src="./files/logo.png" height="120px" width="120px"></center>
+        <h1>misterwebsite</h1>
+        <hr>
+        <h3>Welcome!</h3>
+        <p>I don't know what to put here yet</p>
     </body>
-    <script>
-        var countDownDate = new Date("May 18, 2021 13:00:00").getTime();
-        var x = setInterval(function() {
-          var now = new Date().getTime();
-          var distance = countDownDate - now;
-            
-          var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-          var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-          var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-          var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-          document.getElementById("days").innerHTML = days + " days";
-          document.getElementById("hours").innerHTML = hours + " hours";
-          document.getElementById("minutes").innerHTML = minutes + " min";
-          document.getElementById("seconds").innerHTML = seconds + " sec";
-            
-          if (distance < 0) {
-            clearInterval(x);
-            document.getElementById("countdown").innerHTML = "PLEASE WAIT.";
-          }
-        }, 1000);
-        </script>
 </html>
