updated to make it cooler

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
         <link rel="icon" href="./files/logo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Asap:wght@700&display=swap" rel="stylesheet">
     <style type="text/css">
-        h1 { color: rgb(255, 255, 255); text-align: center; font-family:"Asap", sans-serif; font-size:50px}
-        h3 { color: rgb(255, 255, 255); text-align: center; font-family: "Asap", sans-serif; font-size:30px}
-        p { color: rgb(255, 255, 255); text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size:20px}
+        .info {
+  display: flex;
+  justify-content: space-between;
+}
+        h1 { color: rgb(255, 255, 255); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:45px}
+        h3 { color: rgb(255, 255, 255); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:30px}
+        h4 { color: rgb(255, 255, 255); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:25px}
+        p { color: rgb(255, 255, 255); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:18px}
+        a { color: rgb(20, 207, 104); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:18px}
         body {
-            background-color:rgb(95, 95, 95);
+            background-color:rgb(0, 0, 0);
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -19,10 +23,41 @@
         }
     </style>
     <body>
-        <center><img src="./files/logo.png" height="120px" width="120px"></center>
-        <h1>misterwebsite</h1>
-        <hr>
-        <h3>Welcome!</h3>
-        <p>I don't know what to put here yet</p>
+        <br>
+        <h1>welcome</h1>
+        <h3>here you can find all of my things</h3>
+        <div class="info">
+        <div class="links">
+            <h3 style="text-align: left; color:red">youtube stuff</h3>
+            <a href="https://www.youtube.com/channel/UC58FHcNqdcPLK4KBPuEF-SA" target="_blank">music channel</a>
+            <p></p>
+            <a href="https://www.youtube.com/c/misterdepth" target="_blank">gaming channel</a>
+            <p></p>
+            <a href="https://www.youtube.com/channel/UCauBfDGf1xlMaJW10U8DRzA" target="_blank">vods channel</a>
+        <br>
+        <br>
+            <h3 style="text-align: left; color:cyan">my twitter</h3>
+            <a href="https://www.twitter.com/misterdepth" target="_blank">follow me here</a>
+        <br>
+        <br>
+            <h3 style="text-align: left; color:rgb(131, 0, 131)">join me discord</h3>
+            <a href="https://discord.gg/bHqwhVm" target="_blank">join my dead discord</a>
+        </div>
+        <div class="otherstuff">
+            <h3 style="color:rgb(0, 255, 0)">yo dawg who are you</h3>
+            <p style="text-align:left;">so basically i make music and
+                <br><br>share it on youtube because im very
+                <br><br>lonely, if you want to make me not
+                <br><br>so lonely then uh click links on
+                <br><br>left side of your screen and then like
+                <br><br>idk maybe check me out or something
+                <br><br>id love to talk more but i am very
+                <br><br>busy doing nothing so until i make more
+                <br><br>music or something check out 
+                <br><br><a href="./files/floppa.gif" target="_blank">this amazing floppa gif</a>
+            </p>
+        </div>
+    </div>
+    <h4>ill probably update this sometime soon but until then see you later</h3>
     </body>
 </html>
