--- a/404.html
+++ b/404.html
@@ -1,14 +1,15 @@
 <html>
     <style type="text/css">
-        h1 { color: rgb(0, 0, 0); text-align: center; font-family:"Asap", sans-serif; font-size:50px}
-        h3 { color: rgb(0, 0, 0); text-align: center; font-family: 'Courier New', Courier, monospace; font-size:30px}
+         h1 { color: rgb(255, 255, 255); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:45px}
+        h3 { color: rgb(255, 255, 255); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:30px}
         body {
-            background-color:rgb(255, 255, 255);
+            background-color:rgb(0, 0, 0);
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
         }
+        button { color: rgb(255, 255, 255); background-color: rgb(0, 87, 87); padding:10px 20px; border-color:black; font-family: Arial, Helvetica, sans-serif; font-size:30px; font-size:20px}
     </style>
     <head>
         <title>404 Error</title>
