--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <a href="https://www.twitter.com/misterdepth" target="_blank">follow me here</a>
         <br>
         <br>
-            <h3 style="text-align: left; color:rgb(131, 0, 131)">join me discord</h3>
-            <a href="https://discord.gg/bHqwhVm" target="_blank">join my dead discord</a>
+            <h3 style="text-align: left; color:rgb(255, 153, 0)">soundcloud</h3>
+            <a href="https://www.soundcloud.com/depthmakesmusic" target="_blank">check out my soundcloud for music</a>
         </div>
         <div class="otherstuff">
             <h3 style="color:rgb(0, 255, 0)">yo dawg who are you</h3>
