secret stuff ooooo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>misterwebsite</title>
+        <title>Depth</title>
         <link rel="icon" href="./files/logo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -23,6 +23,7 @@
         }
     </style>
     <body>
+        <a style="color:rgb(61, 61, 61); position:absolute; right:10;" href="./special-resources/" target="_blank">special resources</a>
         <br>
         <h1>welcome</h1>
         <h3>here you can find all of my things</h3>
@@ -58,6 +59,6 @@
             </p>
         </div>
     </div>
-    <h4>ill probably update this sometime soon but until then see you later</h3>
+    <h4 style="font-size:23px;">ill probably update this sometime soon but until then see you later</h3>
     </body>
 </html>
