--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
     <head>
         <title>Depth</title>
         <link rel="icon" href="./files/logo.png">
+        <!--So this is the discord info stuff so like try and ignore it lmao i copied it from
+        stack overflow lol-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:title" content="Depth Website" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://misterdepth.github.io"/>
+        <meta property="og:description" content="the website for depth" />
+        <meta name="theme-color" content="#009dff">
+
     </head>
     <style type="text/css">
         .info {
