--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="Depth Website" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://misterdepth.github.io"/>
+        <meta property="og:url" content="https://depth-dev.github.io"/>
         <meta property="og:description" content="the website for depth" />
         <meta name="theme-color" content="#009dff">
 
