--- a/special-resources/access.html
+++ b/special-resources/access.html
@@ -3,6 +3,14 @@
         <title>Special Resources</title>
         <link rel="icon" href="../files/logo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--So this is the discord info stuff so like try and ignore it lmao i copied it from
+        stack overflow lol-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:title" content="Secret Access"/>
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://depth-dev.github.io/special-resources/"/>
+        <meta property="og:description" content="Special Resources for Depth Website" />
+        <meta name="theme-color" content="#009dff">
     </head>
     <style type="text/css">
         h1 { color: rgb(255, 255, 255); text-align: center; font-family: Arial, Helvetica, sans-serif; font-size:45px}
