--- a/special-resources/access.html
+++ b/special-resources/access.html
@@ -42,6 +42,7 @@
             <label>- </label><a href="./audio.html?file=octagon">OCTAGON!</a>
             <p></p>
             <label>- </label><a href="./audio.html?file=world_of_gray">World of Gray</a>
+            <label>- </label><a href="./audio.html?file=rosepetalv1">Rosepetal (early version)</a>
         </div>
         <div class="floppa">
             <h3 style="color:rgb(233, 54, 54)">Big Floppa</h3>
@@ -50,8 +51,8 @@
         <div class="updates">
             <h3 style="color:rgb(86, 255, 199)">Updates on Things</h3>
             <p>Why hello there! This is where I
-                <br>will be posting all of my updates
-                <br>, mainly for this website.
+                <br>will be posting all of my updates,
+                <br> mainly for this website.
                 <br>
                 <br>This will be updated every so often,
                 <br>and there isn't really a log
