--- a/special-resources/audio.html
+++ b/special-resources/audio.html
@@ -50,6 +50,9 @@
                     document.getElementById("title").textContent = "Song: World of Gray"
                     document.getElementById("audio").src = "./files/World of Gray.ogg"
                     break;
+                case "rosepetalv1":
+                    document.getElementById("title").textContent = "Song: Rosepetal (early version)"
+                    document.getElementById("audio").src = "./files/Rosepetal.ogg"
                 default:
                     document.getElementById("title").textContent = "File not found!"
                     break;
