--- a/special-resources/audio.html
+++ b/special-resources/audio.html
@@ -51,8 +51,9 @@
                     document.getElementById("audio").src = "./files/World of Gray.ogg"
                     break;
                 case "rosepetalv1":
-                    document.getElementById("title").textContent = "Song: Rosepetal (early version)"
+                    document.getElementById("title").textContent = "Song: Rosepetal (early ver)"
                     document.getElementById("audio").src = "./files/Rosepetal.ogg"
+                    break;
                 default:
                     document.getElementById("title").textContent = "File not found!"
                     break;
